syntax = "proto3";
package cosmos_sdk.crypto.v1;

//import "third_party/proto/gogoproto/gogo.proto";

option go_package = "github.com/cosmos/cosmos-sdk/crypto/types";

// CompactBitArray is an implementation of a space efficient bit array.
// This is used to ensure that the encoded data takes up a minimal amount of
// space after proto encoding.
// This is not thread safe, and is not intended for concurrent usage.
message CompactBitArray {
    //  TODO: re-enable these when the actual implementation is added
    //  option (gogoproto.sizer)            = false;
    //  option (gogoproto.goproto_stringer) = false;

    uint32 extra_bits_stored = 1;
    bytes  elems             = 2;
}
